src/graphics/_misc/fonts/general_bsg.css
@font-face {
  font-family: 'Bahnschrift';
  src: url('BAHNSCHRIFT.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: 'pixelmix';
  src: url('pixelmix.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
}

/* https://www.dafont.com/ds-digital.font */
@font-face {
  font-family: 'DS_DIGITAL';
  src: url('DS-DIGI.TTF') format('truetype');
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: 'Corbel-Bold';
  src: url('corbel-bold.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
}

